Ui Fix : Doc search icon not showing
Hope you try to hide only the circular search icon on docs

--- a/web/src/css/custom.css
+++ b/web/src/css/custom.css
@@ -806,7 +806,7 @@ a.hash-link {
 .DocSearch-Button {
   border-radius: 8px !important;
 }
-.DocSearch-Button svg {
+.DocSearch-Button>svg {
   display: none;
 }
 .DocSearch-Button-Placeholder {
